<resources>
    <string name="app_name">MedEx</string>

    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="login_trouble">Trouble logging in?</string>
    <string name="sign_up_instead">Don\'t have an account? Sign up instead.</string>
    <string name="log_in_instead">Already have an account? Log in instead.</string>

    <string name="spinner_hint">Client</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string-array name="spinner">
        <item>Client</item>
        <item>Employee</item>
    </string-array>

    <string name="start_prompt">Choose an opening time</string>
    <string name="closing_prompt">Choose an closing time</string>


    <string-array name="time_array">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
        <item> - </item>
    </string-array>


    <string-array name="time_apt_array">
        <item>00:00</item>
        <item>00:15</item>
        <item>00:30</item>
        <item>00:45</item>

        <item>01:00</item>
        <item>01:15</item>
        <item>01:30</item>
        <item>01:45</item>

        <item>02:00</item>
        <item>02:15</item>
        <item>02:30</item>
        <item>02:45</item>

        <item>03:00</item>
        <item>03:15</item>
        <item>03:30</item>
        <item>03:45</item>

        <item>04:00</item>
        <item>04:15</item>
        <item>04:30</item>
        <item>04:45</item>

        <item>05:00</item>
        <item>05:15</item>
        <item>05:30</item>
        <item>05:45</item>

        <item>06:00</item>
        <item>06:15</item>
        <item>06:30</item>
        <item>06:45</item>

        <item>07:00</item>
        <item>07:15</item>
        <item>07:30</item>
        <item>07:45</item>

        <item>08:00</item>
        <item>08:15</item>
        <item>08:30</item>
        <item>08:45</item>

        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>

        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>

        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>

        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>

        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>

        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>

        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>

        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>

        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>

        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>

        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>

        <item>21:00</item>
        <item>21:15</item>
        <item>21:30</item>
        <item>21:45</item>

        <item>22:00</item>
        <item>22:15</item>
        <item>22:30</item>
        <item>22:45</item>

        <item>23:00</item>
        <item>23:15</item>
        <item>23:30</item>
        <item>23:45</item>

        <item> - </item>
    </string-array>

    <string-array name="day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


    <string name="title_activity_landing_page">LandingPage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="create_profile">Create Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="continue_profile">Continue</string>
    <string name="admin">admin</string>
    <string name="manage_clinics">Manage Clinics</string>
    <string name="manage_services">Manage Services</string>
    <string name="manage_users">Manage Users</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="street_address">Street Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="postal_code">Postal Code</string>
    <string name="select_services">Select Services</string>
    <string name="manage_clinic">Manage Clinic</string>
    <string name="clinic">clinic</string>
    <string name="payment_method">Payment Methods</string>
    <string name="insurance_types">Insurance Types</string>
    <string name="change_view_time">change/view time</string>
    <string name="apply">apply</string>
    <string name="back">back</string>
    <string name="select_times">Select Times</string>
    <string name="select_clinic">Select Clinic</string>
    <string name="enqueue">Reserve Spot</string>
    <string name="view_services">View Services</string>
    <string name="dequeue">Dequeue User</string>
    <string name="rate">rate clinic</string>
    <string name="reserve_spot">Reserve Spot</string>
    <string name="view_clinics">View Clinics</string>
    <string name="view_appointments">View Appointments</string>
</resources>
