<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:id="@+id/light_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FCFAF1"
        app:fontFamily="@font/quicksand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <!-- Sign Up -->

        <EditText
            android:theme="@style/username"
            android:id="@+id/first_name"
            app:fontFamily="@font/quicksand"
            android:layout_width="match_parent"
            android:layout_above="@+id/last_name"
            android:layout_marginBottom="15dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:ems="15"
            android:inputType="textPersonName"
            android:hint="@string/first_name" />

        <EditText
            android:theme="@style/username"
            android:id="@+id/last_name"
            app:fontFamily="@font/quicksand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:ems="15"
            android:inputType="textPersonName"
            android:hint="@string/last_name" />

        <!-- Rectangle -->

        <Button
            android:id="@+id/continue_button"
            android:layout_width="139dp"
            android:layout_height="59dp"
            android:layout_below="@+id/last_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/rectangle"
            android:elevation="4dp"
            android:fontFamily="@font/quicksand"
            android:onClick="onContinueClick"
            android:text="@string/continue_profile"
            android:textColor="#FCFAF1" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/medex" />

        <TextView
            android:id="@+id/create_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/create_profile"
            android:textAppearance="@style/sign_up"
            android:textSize="45sp"
            app:fontFamily="@font/quicksand" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

