<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClinicActivity">

    <!-- Landing Page Light-->

    <RelativeLayout
        android:id="@+id/light_landingPage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FCFAF1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:fontFamily="@font/quicksand">

        <!-- Main Page -->

        <Button
            android:id="@+id/manage_services_button"
            android:layout_width="139dp"
            android:layout_height="59dp"
            android:background="@drawable/rectangle"
            android:layout_below="@id/manage_clinic_button"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/quicksand"
            android:onClick="onServiceClick"
            android:text="@string/manage_services"
            android:layout_centerHorizontal="true"
            android:textColor="#FCFAF1" />

        <Button
            android:id="@+id/manage_clinic_button"
            android:layout_width="139dp"
            android:layout_height="59dp"
            android:layout_centerInParent="true"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/quicksand"
            android:text="@string/manage_clinic"
            android:onClick="onClinicClick"
            android:textColor="#FCFAF1" />

        <Button
            android:id="@+id/manage_time"
            android:layout_width="139dp"
            android:layout_height="59dp"
            android:layout_marginBottom="50dp"
            android:layout_above="@id/manage_clinic_button"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rectangle"
            android:fontFamily="@font/quicksand"
            android:onClick="onTimeClick"
            android:text="@string/change_view_time"
            android:textColor="#FCFAF1" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/medex" />

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text=""
            android:textColor="#090909" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

