<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:id="@+id/light_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FCFAF1"
        app:fontFamily="@font/quicksand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAppearance="@style/sign_up"
            android:textSize="45sp"
            app:fontFamily="@font/quicksand" />

        <!--EMAIL BAR-->
        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/username_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginBottom="15dp">

            <!--EMAIL TEXT-->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:theme="@style/username"
                app:fontFamily="@font/quicksand" />

            <!--ACTIONS-->
            <RelativeLayout
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_alignEnd="@+id/email"
                android:layout_alignRight="@+id/email">

                <ImageView
                    android:id="@+id/email_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/x" />

                <ImageView
                    android:id="@+id/email_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/check" />

                <ProgressBar
                    android:id="@+id/email_circle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:indeterminate="true" />
                </RelativeLayout>

        </RelativeLayout>

        <!--USERNAME BAR-->
        <RelativeLayout
            android:id="@+id/username_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp">
            <EditText
                android:theme="@style/username"
                android:id="@+id/username"
                app:fontFamily="@font/quicksand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:ems="15"
                android:inputType="textPersonName"
                android:hint="@string/username" />

            <RelativeLayout
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_alignEnd="@+id/username"
                android:layout_alignRight="@+id/username">

                <ImageView
                    android:id="@+id/username_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/x" />

                <ImageView
                    android:id="@+id/username_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/check" />

                <ProgressBar
                    android:id="@+id/username_circle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:indeterminate="true" />
            </RelativeLayout>
        </RelativeLayout>

        <!--PASSWORD BAR-->
        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="15dp">
            <EditText
                android:theme="@style/username"
                android:id="@+id/password"
                app:fontFamily="@font/quicksand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <!--ACTIONS-->
            <RelativeLayout
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_alignEnd="@+id/password"
                android:layout_alignRight="@+id/password">

                <ImageView
                    android:id="@+id/password_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/x" />

                <ImageView
                    android:id="@+id/password_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/check" />

            </RelativeLayout>

        </RelativeLayout>

        <!--CONFIRM PASSWORD BAR-->
        <RelativeLayout
            android:id="@+id/password2_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/password_layout"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:theme="@style/username"
                app:fontFamily="@font/quicksand" />

            <!--ACTIONS-->
            <RelativeLayout
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_alignEnd="@+id/password2"
                android:layout_alignRight="@+id/password2">

                <ImageView
                    android:id="@+id/password2_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/x" />

                <ImageView
                    android:id="@+id/password2_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/check" />

            </RelativeLayout>

        </RelativeLayout>


        <!-- Rectangle -->

        <Button
            android:id="@+id/sign_up_instead"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:onClick="loginInstead"
            android:text="@string/log_in_instead"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="139dp"
            android:layout_height="59dp"
            android:layout_below="@+id/password2_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/rectangle"
            android:elevation="4dp"
            android:fontFamily="@font/quicksand"
            android:onClick="onSignupClick"
            android:text="@string/sign_up"
            android:textColor="#FCFAF1" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/medex"
            android:cropToPadding="true"
            android:padding="0dp"/>

        <RelativeLayout
            android:id="@+id/rl_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginStart="250dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/email_layout">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                />

        </RelativeLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

